# erudit-backend

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 1f71cf9cb3a9_fix_column_names_in_applicationmodel.py  a87ae258065a_initial_commit.py  bef7ac57bdac_add_requests_table.py  da7f3bdbbe2c_add_admins_table.py
src/: __init__.py  config.py  lifecycle.py  logging.py  main.py  middlewares.py  routes.py  schemas.py
src/admins/: dependencies.py  models.py  repositories.py  routes.py  schemas.py  services.py
src/applications/: dependencies.py  models.py  repositories.py  routes.py  schemas.py  services.py
src/auth/: routes.py  schemas.py
src/auth/security/: dependencies.py  schemas.py  token.py
src/events/: dependencies.py  models.py  repositories.py  routes.py  schemas.py  services.py
src/log/: config.py
src/requests/: dependencies.py  models.py  repositories.py  routes.py  schemas.py  services.py
